tests/errors/validate_ret_type.err
Type Error: Invalid return type for function: expected `Int` but got `List<Char>`
1: fn foo() -> Int {
                   ^
